parrafo y tamaño fuente

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Curso git</title>
+    <link rel="stylesheet" href="estilos.css">
   </head>
   <body>
-
+    <h1>Proyecto empresarial</h1>
   </body>
 </html>
